--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
+    "express":"*",
     "nodemailer": "^6.7.8",
     "otp-generator": "^4.0.0"
   }
